--- a/faq.html
+++ b/faq.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>RESEÑAS</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -18,43 +18,119 @@
             <ul>
                 <li><a class="navegacion" href="index.html">Inicio</a></li>
                 <li><a class="navegacion" href="productos.html">Productos</a></li>
-                <li><a class="navegacion" href="faq.html">Preguntas Frecuentes</a></li>
+                <li><a class="navegacion" href="faq.html">Reseñas</a></li>
                 <li><a class="navegacion" href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <h2>Dejanos Tu Consulta</h2>
-
-
-        <form action="https://formspree.io/f/maneaakw" method="POST">
-
-            <div class="campo">
-                <i class="fa-solid fa-user"></i>
-                <input type="text" name="nombre" placeholder="Nombre..." required>
+        <h2>Nuestros clientes opinan</h2>
+        <div class="opinion-grid">
+            <div class="opinion">
+                <!-- 4 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                <p>- Muy ricas, la textura es perfecta. Volveré a comprar</p>
             </div>
 
-            <div class="campo">
-                <i class="fa-solid fa-envelope"></i>
-                <input type="email" name="email" placeholder="Correo electrónico..." required>
+            <div class="opinion">
+                <!-- 5 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <p>- ¡Las mejores galletas que he probado en mi vida!</p>
             </div>
 
-            <div class="campo">
-                <i class="fa-solid fa-phone"></i>
-                <input type="tel" name="telefono" placeholder="Teléfono...">
+                        <div class="opinion">
+                <!-- 5 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <p>- Excelentes. A mis hijos les encantaron.</p>
             </div>
 
-            <div class="campo">
-                <i class="fa-solid fa-comment"></i>
-                <textarea name="mensaje" placeholder="Escriba su mensaje aquí..." rows="4" required></textarea>
+            <div class="opinion">
+                <!-- 5 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <p>- Llegaron rápido y frescas. ¡10/10!</p>
             </div>
 
-            <button type="submit">
-                <i class="fa-solid fa-paper-plane"></i> Enviar
-            </button>
+            <div class="opinion">
+                <!-- 4 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                <p>- Me gustaron mucho, aunque un poco dulces para mi gusto</p>
+            </div>
 
-        </form>
+            <div class="opinion">
+                <!-- 5 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <p>- Relleno generoso y sabor casero. Muy Recomendables.</p>
+            </div>
 
+            <div class="opinion">
+                <!-- 5 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <p>- Ideal para regalar. Vienen bien presentadas.</p>
+            </div>
+            
+            <div class="opinion">
+                <!-- 4 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                <p>- Muy buena calidad.Faltó un poco mas de crocancia.</p>
+            </div>
+
+            <div class="opinion">
+                <!-- 5 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <p>- Sabor auténtico y buena variedad. Me encantaron.</p>
+            </div>
+
+            <div class="opinion">
+                <!-- 5 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <p>- ¡La de dulce de leche es una locura!.</p>
+            </div>
+
+            <div class="opinion">
+                <!-- 4 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                <p>- Ricas, aunquela de glasé estaba un poco dura.</p>
+            </div>
+
+            <div class="opinion">
+                <!-- 5 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <p>- Compré para una fiesta, todosfelices. Deliciosas.</p>
+            </div>
+
+            <div class="opinion">
+                <!-- 4 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="far fa-star"></i>
+                <p>- Buen sabor y presentación Repetiré la compra.</p>
+            </div>
+
+            <div class="opinion">
+                <!-- 5 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <p>- Increible textura, especialmente la New York.</p>
+            </div>
+
+            <div class="opinion">
+                <!-- 5 estrellas -->
+                <i class="fas fa-star"></i><i class="fas fa-star"></i><i class="fas fa-star">                    
+                </i><i class="fas fa-star"></i><i class="fas fa-star"></i>
+                <p>- ¡Recomendadas 100%! Excelente atencion también.</p>
+            </div>
+        </div>
 
     </main>
 
