--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <ul>
                 <li><a class="navegacion" href="index.html">Inicio</a></li>
                 <li><a class="navegacion" href="productos.html">Productos</a></li>
-                <li><a class="navegacion" href="faq.html">Preguntas Frecuentes</a></li>
+                <li><a class="navegacion" href="faq.html">Reseñas</a></li>
                 <li><a class="navegacion" href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
