--- a/productos.html
+++ b/productos.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PRODUCTOS</title>
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
@@ -12,19 +12,51 @@
 <body>
     <header>
         <div class="encabezado">
-            <a href="index.html"><img src="imagenes/sin-fondo.png" alt="Logo Dulces de Mili" class="logo"></a>            
+            <a href="index.html"><img src="imagenes/sin-fondo.png" alt="Logo Dulces de Mili" class="logo"></a>
         </div>
         <nav>
             <ul>
                 <li><a class="navegacion" href="index.html">Inicio</a></li>
                 <li><a class="navegacion" href="productos.html">Productos</a></li>
-                <li><a class="navegacion" href="faq.html">Preguntas Frecuentes</a></li>
+                <li><a class="navegacion" href="faq.html">Reseñas</a></li>
                 <li><a class="navegacion" href="contacto.html">Contacto</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        
+        <h2> nuestros productos</h2>
+        <div class="product-container">
+            <div class="product">
+                <img src="imagenes/kitty kuromi.jpg" alt="Galleta con Glase Real">
+                <h3>Glasé Real</h3>
+                <p>Galleta decorada con glaseado firme y brillante, ideal para diseños personalizados y ocasiones
+                    especiales.</p>
+            </div>
+
+            <div class="product">
+                <img src="imagenes/new york.jpg" alt="Galleta tipo New York">
+                <h3>New York</h3>
+                <p>Galleta grande, suave por dentro y crocante por fuera, rellena o cargada con chips de chocolate o
+                    dulce de leche.</p>
+            </div>
+
+            <div class="product">
+                <img src="imagenes/new york mini.jpg" alt="Mini New York">
+                <h3>Mini New York</h3>
+                <p>Versión mini de la clásica cookie New York: suave por dentro, crocante por fuera y ¡llena de sabor!
+                </p>
+            </div>
+
+
+
+            <div class="product">
+                <img src="imagenes/alfajores2.jpg" alt="Alfajor de Maicena">
+                <h3>Alfajor de Maicena</h3>
+                <p>Clásico alfajor con tapas suaves de maicena, relleno de dulce de leche y bordes con coco rallado.</p>
+            </div>
+
+
+
     </main>
 
     <footer>
